--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script type="application/javascript" src="popup_script.js">
+  <script type="application/javascript">
     const hello = () => {
       console.log('hello')
     }
